--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- PWA -->
+    <meta name="description" content="An app to practice Japanese vocabulary and sentences with various games." />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+
     <title>Japanese Vocabulary Practice</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/wanakana"></script>
