--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      
     <!-- PWA -->
     <meta name="description" content="An app to practice Japanese vocabulary and sentences with various games." />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#192230" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
  
     <title>Japanese Vocabulary Practice</title>
